--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -1,32 +1,12 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        xmlns:pages="using:AstroGathering.Pages"
         x:Class="AstroGathering.MainWindow"
-        Title="AstroGathering">
-    <Window.Styles>
-        <Style Selector="Button.google-button">
-            <Setter Property="Background" Value="#4285F4"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="CornerRadius" Value="4"/>
-        </Style>
-    </Window.Styles>
+        Title="AstroGathering - Connect with the Cosmos"
+        WindowState="Maximized"
+        Width="1000" Height="600">
     
-    <Grid>
-        <StackPanel Margin="20" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="Welcome to AstroGathering" FontSize="28" FontWeight="Bold" Margin="0,0,0,10"/>
-            <TextBlock Text="Login to continue" FontSize="16" Margin="0,0,0,20" Opacity="0.7"/>
-            <Button x:Name="GoogleLoginButton" 
-                    Classes="google-button"
-                    Width="250" 
-                    Height="40" 
-                    Margin="0,0,0,20">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Sign in with Google" Margin="10,0,0,0"/>
-                </StackPanel>
-            </Button>
-            <TextBlock x:Name="StatusMessage" Margin="0,10"/>
-        </StackPanel>
-    </Grid>
+    <!-- Host the LoginPage -->
+    <pages:LoginPage />
+    
 </Window>
